tests/sksl/errors/UsingInvalidValue.glsl
### Compilation failed:

error: 3: expected '(' to begin constructor invocation
error: 4: expected '(' to begin constructor invocation
error: 5: expected '(' to begin function call
error: 6: expected '(' to begin function call
error: 8: expected '(' to begin constructor invocation
error: 9: expected '(' to begin constructor invocation
error: 10: expected '(' to begin function call
error: 11: expected '(' to begin function call
8 errors
